gcc/testsuite/g++.dg/cpp1y/pr60377.C
// PR c++/60377
// { dg-options -std=c++1y }

void foo(auto, void (f*)()); // { dg-error "expected" }

struct A
{
  int i;
};
